# rumca-js.github.io

./: .gitmodules  Makefile  README.md  bookmarks.html  books.html  contentsscanner.html  feeds.html  index.html  internet.html  movies.html  music.html  preview.html  search.html  url.html  videogames.html  videounlock.html
data/: Makefile  filter.py  filter_all.sh  filterdb.py  internet.db.zip03  movies.db  pyproject.toml
data/music/: diss-opian.m3u  diss-t-opian.m3u  doom.m3u  dystopain.m3u  folkmetal.m3u  legends-from-the-commandline.m3u  newretro.m3u  pop.m3u  powermetal.m3u  random.m3u  slop.m3u
data/utils/: reflected.py
quickstart/public/static_lists/: amiga.html  artificial_intelligence.html  awesome_lists.html  demoscene.html  filter.py  filter_all.bat  index.html  offline_search.html  operating_system.html  programming_language.html  pyproject.toml  quake.html  reddit_channels.html  search_engines.html  selfhost.html  static_lists.html  tabletop_game.html  viewer.html  viewerzip.html  virtual_reality.html
quickstart/public/static_lists/data/: amiga.json  anime_show.json  artificial_intelligence.json  astronomy.json  aviation.json  awesome_lists.json  commandline.json  cpp.json  demoscene.json  diablo.json  docker.json  emulation.json  gateways.json  github.json  hacking.json  minecraft.json  operating_systems.json  personal.json  programming.json  programming_languages.json  quake.json  raspberry_pi.json  reddit_channels.json  retro_game.json  rss.json  science.json  search_engines.json  selfhost.json  tabletop_game.json  top_500.json  video_game.json  (+2 more)
(+309 files in other folders)
