[tool.poetry]
name = "static-lists"
version = "0.1.0"
description = ""
authors = ["X Y Z <rozbujnik@gmail.com>"]
readme = "README.md"
packages = [{include = "static_lists"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "*"
linkarchivetools="0.1.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
