[tool.poetry]
name = "static-lists"
version = "0.1.0"
description = ""
authors = ["X Y Z <rozbujnik@gmail.com>"]
readme = "README.md"
packages = [{include = "static_lists"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
